--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="素材/img05.jpg" class="d-block w-100" alt="画像">
+          <img src="https://github.com/rm4158/rm4158.github.io/blob/main/img05.jpg?raw=true" class="d-block w-100" alt="画像">
           <div class="carousel-caption d-none d-md-block">
             <h5>３枚目の写真です！</h5>
             <p>ここに説明が入ります！</p>
