--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="container">
         <div class="row servise-description">
           <div class="col-md-6">
-            <img src="素材/img06.jpg" alt="画像" class="img-fluid">
+            <img src="https://github.com/rm4158/rm4158.github.io/blob/main/img06.jpg?raw=true" alt="画像" class="img-fluid">
           </div>
             <div class="col-md-6">
               <h3>サービス１</h3>
@@ -104,7 +104,7 @@
           </div>
         <div class="row servise-description">
           <div class="col-md-6  order-md-2">
-            <img src="素材/img06.jpg" alt="画像" class="img-fluid">
+            <img src="https://github.com/rm4158/rm4158.github.io/blob/main/img06.jpg?raw=true" alt="画像" class="img-fluid">
           </div>
             <div class="col-md-6 order-md-1">
               <h3>サービス2</h3>
@@ -114,7 +114,7 @@
           </div>
         <div class="row servise-description">
           <div class="col-md-6">
-            <img src="素材/img06.jpg" alt="画像" class="img-fluid">
+            <img src="https://github.com/rm4158/rm4158.github.io/blob/main/img06.jpg?raw=true" alt="画像" class="img-fluid">
           </div>
           <div class="col-md-6">
             <h3>サービス3</h3>
@@ -124,7 +124,7 @@
         </div>
         <div class="row servise-description">
           <div class="col-md-6  order-md-2">
-            <img src="素材/img06.jpg" alt="画像" class="img-fluid">
+            <img src="https://github.com/rm4158/rm4158.github.io/blob/main/img06.jpg?raw=true" alt="画像" class="img-fluid">
           </div>
           <div class="col-md-6  order-md-1">
             <h3>サービス4</h3>
